refactor: reformat/reorganize